# product_annotator

./: .gitignore  README.md  config.py  config.yaml  main.py  pyproject.toml
src/: __init__.py  dataset_generator.py  product_annotator.py  product_collector.py  text_extractor.py
